structural-typing/tests/ui/nested_single_field_rejected.stderr
error: expected `:`
  --> tests/ui/nested_single_field_rejected.rs:10:18
   |
10 |     #[nested(data)]
   |                  ^
