structural-typing/tests/ui/nested_single_field_rejected.rs
use structural_typing::structural;

#[structural]
struct Inner {
    data: String,
}

#[structural]
struct SingleField<I: inner::Fields> {
    #[nested(data)]
    inner: Inner<I>,
}

fn main() {}
